--- a/Introduce-SJKC-Chung-Hwa-1/index.html
+++ b/Introduce-SJKC-Chung-Hwa-1/index.html
@@ -57,15 +57,15 @@
     <br>
     <h1 style="text-align: center;" >Welcome To SJKC Chung Hwa 1</h1>
     <form>
-        <input type="button" class="button" onclick="window.location.href='http://127.0.0.1:5500/Introduse-Ourselves/index.html'" value="introduce ourselves">
+        <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/Introduce-Ourselves/index.html';" value="introduce ourselves">
         <input type="button" class="button" onclick="window.location.href='http://www.facebook.com/CH1PBC2038/';" value="School Facebook">
-        <input type="button" class="button" onclick="window.location.href='http://127.0.0.1:5500/School-History/index.html';" value="School History">
+        <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/School-History/index.html';" value="School History">
         <br>
-        <input type="button" class="button" onclick="window.location.href='http://127.0.0.1:5500/Library/index.html';" value="Library">
-        <input type="button" class="button" onclick="window.location.href='http://127.0.0.1:5500/School-Hall/index.html';" value="School Hall">
-        <input type="button" class="button" onclick="window.location.href='http://127.0.0.1:5500/TVPSS/index.html';" value="TVPSS">
+        <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/Library/index.html';" value="Library">
+        <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/School-Hall/index.html';" value="School Hall">
+        <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/TVSPP/index.html';" value="TVPSS">
         <br>
-        <input type="button" class="button" onclick="window.location.href='http://127.0.0.1:5500/Stem-School-Team-And-Maker-Lab/index.html';" value="STEM School Team And Maker Lab">
+        <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/STEM-School-Team-And-Maker-Lab/index.html';" value="STEM School Team And Maker Lab">
     </form>
     <br><br><br><br><br>
     <h3 style="text-align: center;">By:Loh Yik Shen,Loy Zheng Yi and Ooi Ting Ruey</h3>
