--- a/Stem-School-Team-And-Maker-Lab/index.html
+++ b/Stem-School-Team-And-Maker-Lab/index.html
@@ -22,15 +22,10 @@
     </style>
 </head>
 <body>
-    <h1>STEM School Team</h1>
-    &nbsp;&nbsp;&nbsp;
-    <video width="" height="525" autoplay>
-    <source src="STEM-Video.mp4" type="Video/mp4">
-    </video>
-    <h1>Maker Lab</h1>
+    <h1>Stem School Team And Maker Lab</h1>
     &nbsp;&nbsp;&nbsp;
     <img src="Maker_Lab_1.png" alt="" width="" height="200">
     <img src="Maker_Lab_2.png" alt="" width="" height="200">
-    <p>STEM Club and Maker Lab were established in March 2022. Here were 40 computer and 5 laptop. Our teachers also teach a lots of robotic class such as micro bit class, arduino class, scratch class and many others. </p>
+    <p>STEM Club and Maker Lab were established in March 2022. Here were 40 computer and 5 laptop. Our teachers also teach a lots of robotic class such as micro bit class, arduino class, scratch class and many others. Our Stem School Team also started from 2022. </p>
 </body>
 </html>
