--- a/Introduse-Ourselves/index.html
+++ b/Introduse-Ourselves/index.html
@@ -9,7 +9,7 @@
             font-family: monospace;
             color: white;
         }
-        li{
+        ul{
             color: ghostwhite;
             font-size: x-large ;
         }
@@ -23,12 +23,12 @@
 </head>
 <body>
     <h1 style="text-align: center;">Loh Yik Shen</h1>
-    <li>Hello! I'm Loh Yik Shen. I'm 11 years old. I come from SJKC CHUNG HWA 1 in Butterworth, Pulau Pinang. I think this is the most difficult STEM competition that I had seen. In this competition, I made the website and edit video with Ooi Ting Ruey. I also had compete in lots of STEM competitions like ISIC-WOU, VIC, Microbotik and other competitions. </li>
+    <ul><li>Hello! I'm Loh Yik Shen. I'm 11 years old. I come from SJKC CHUNG HWA 1 in Butterworth, Pulau Pinang. I think this is the most difficult STEM competition that I had seen. In this competition, I made the website and edit video with Ooi Ting Ruey. I also had compete in lots of STEM competitions like ISIC-WOU, VIC, Microbotik and other competitions. </li>
     <br><br><br>
     <h1 style="text-align: center;">Loy Zheng Yi</h1>
-    <li>I'm Loy Zheng Yi. I am 12 years old. I come from SJKC CHUNG HWA 1 in Butterworth, Pulau Pinang. I'm so proud that I can participate in this competition. Although I had participated in many STEM competition, this is the most interesting competition that I had participated.In this competition, I provide information and history about our school. </li>
+    <ul><li>I'm Loy Zheng Yi. I am 12 years old. I come from SJKC CHUNG HWA 1 in Butterworth, Pulau Pinang. I'm so proud that I can participate in this competition. Although I had participated in many STEM competition, this is the most interesting competition that I had participated.In this competition, I provide information and history about our school. </li></ul>
     <br><br><br>
     <h1 style="text-align: center;">Ooi Ting Ruey</h1>
-    <li>Hi, I'm Ooi Ting Ruey. I'm 11 years old. I come from SJKC CHUNG HWA 1 in Butterworth, Pulau Pinang. In this competition, I give many suggestion and I edit the video. I think this is the most interesting competition that I have seen ever. </li>
+    <ul><li>Hi, I'm Ooi Ting Ruey. I'm 11 years old. I come from SJKC CHUNG HWA 1 in Butterworth, Pulau Pinang. In this competition, I give many suggestion and I edit the video. I think this is the most interesting competition that I have seen ever. </li></ul>
 </body>
 </html>
