--- a/Introduse-Ourselves/index.html
+++ b/Introduse-Ourselves/index.html
@@ -11,7 +11,8 @@
         }
         ul{
             color: ghostwhite;
-            font-size: x-large ;
+            font-size: x-large;
+            list-style-type: disc;
         }
         body {
         background-image: url('Background.jpg');
