--- a/Introduse-Ourselves/index.html
+++ b/Introduse-Ourselves/index.html
@@ -12,7 +12,7 @@
         ul{
             color: ghostwhite;
             font-size: x-large;
-            list-type: disc;
+            list-style-type: disc;
         }
         body {
         background-image: url('Background.jpg');
