--- a/Introduse-Ourselves/index.html
+++ b/Introduse-Ourselves/index.html
@@ -8,6 +8,7 @@
         h1{
             font-family: monospace;
             color: white;
+            font-size: 5px;
         }
         ul{
             color: ghostwhite;
