--- a/Introduse-Ourselves/index.html
+++ b/Introduse-Ourselves/index.html
@@ -14,6 +14,7 @@
             color: ghostwhite;
             font-size: x-large;
             list-style-type: disc;
+            font-size: 100% 100%;
         }
         body {
         background-image: url('Background.jpg');
