--- a/Introduse-Ourselves/index.html
+++ b/Introduse-Ourselves/index.html
@@ -8,7 +8,7 @@
         h1{
             font-family: monospace;
             color: white;
-            font-size: 100% 100%;
+            font-size: 100px 100px;
         }
         ul{
             color: ghostwhite;
