--- a/School-Hall/index.html
+++ b/School-Hall/index.html
@@ -30,8 +30,8 @@
     <br>
     <ul><li>It is a very comfortable place for every school member, especially teachers and students to gather here. Every Monday of the month, students and teachers will gather here. In the morning, they will sing" Lagu Negaraku" and" Untuk Negeri Kita". Besides, they will also read the" Rukun Negara". Then, our school principal will also give a speech to every student. </li></ul>
     &nbsp;&nbsp;&nbsp;
-    <img src="Hall_1.jpg" alt="" width="" height="200">
-    <img src="Hall_2.png" alt="" width="" height="200">
+    <img src="Hall_3.PNG" alt="" width="" height="200">
+    <img src="Hall_4.PNG" alt="" width="" height="200">
     <br>
     <ul><li>During some celebration days, our school hall will be used to celebrate them, like Chinese New Year, National Day, Malaysia Day and many more. It is a golden opportunity for all the students and teachers to celebrate some special festival together. </li></ul>
     &nbsp;&nbsp;&nbsp;
