--- a/Introduce-SJKC-Chung-Hwa-1/index.html
+++ b/Introduce-SJKC-Chung-Hwa-1/index.html
@@ -57,7 +57,7 @@
     <br>
     <h1 style="text-align: center;" >Welcome To SJKC Chung Hwa 1</h1>
     <form>
-        <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/Introduse-Ourselves/index.html';" value="introduce ourselves">
+        <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/Introduce-Ourselves/index.html';" value="Introduce Ourselves">
         <input type="button" class="button" onclick="window.location.href='http://www.facebook.com/CH1PBC2038/';" value="School Facebook">
         <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/School-History/index.html';" value="School History">
         <br>
