--- a/Introduce-Ourselves/index.html
+++ b/Introduce-Ourselves/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>library</title>
+    <style>
+        h1{
+            font-family: monospace;
+            color: white;
+        }
+        ul{
+            color: ghostwhite;
+            font-size: x-large ;
+            list-type: disc;
+        }
+        body {
+        background-image: url('Background.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
+        background-size: 100% 100%;
+        }
+    </style>
+</head>
+<body>
+</body>
