--- a/School-Hall/index.html
+++ b/School-Hall/index.html
@@ -45,8 +45,8 @@
     <br>
     <ul><li>Every year, there will be lots of activities that are held in our school, like drawing competitions, singing competitions, etc. But, some competitions will be held in our school hall like an English story competition, a singing competition, etc. All the students will gather to see some students attending the competitions. By attending these competitions, students will learn more vocabulary. </li></ul>
     &nbsp;&nbsp;&nbsp;
-    <img src="Hall_9" alt="" width="" height="200">
-    <img src="Hall_10" alt="" width="" height="200">
+    <img src="Hall_9.jpg" alt="" width="" height="200">
+    <img src="Hall_10.png" alt="" width="" height="200">
     <br>
     <ul><li>Apart from that, SJKC CHUNG HWA 1’s hall is a place that can do many amazing activities. Therefore, we have to always keep our school clean and new. </li></ul>
 </body>
