--- a/School-Hall/index.html
+++ b/School-Hall/index.html
@@ -35,8 +35,8 @@
     <br>
     <ul><li>During some celebration days, our school hall will be used to celebrate them, like Chinese New Year, National Day, Malaysia Day and many more. It is a golden opportunity for all the students and teachers to celebrate some special festival together. </li></ul>
     &nbsp;&nbsp;&nbsp;
-    <img src="" alt="" width="" height="200">
-    <img src="" alt="" width="" height="200">
+    <img src="Hall_5.jpg" alt="" width="" height="200">
+    <img src="Hall_6.PNG" alt="" width="" height="200">
     <br>
     <ul><li>When there are some speeches from other people, they will also give a speech here. All of the students can listen and learn some interesting knowledge from them. </li></ul>
     &nbsp;&nbsp;&nbsp;
