--- a/Stem-School-Team-And-Maker-Lab/index.html
+++ b/Stem-School-Team-And-Maker-Lab/index.html
@@ -24,8 +24,8 @@
 <body>
     <h1>Stem School Team And Maker Lab</h1>
     &nbsp;&nbsp;&nbsp;
-    <img src="Maker_Lab_1.png" alt="" width="" height="200">
-    <img src="Maker_Lab_2.png" alt="" width="" height="200">
+    <img src="Stem_1.png" alt="" width="" height="200">
+    <img src="Stem_2.png" alt="" width="" height="200">
     <p>STEM Club and Maker Lab were established in March 2022. Here were 40 computer and 5 laptop. Our teachers also teach a lots of robotic class such as micro bit class, arduino class, scratch class and many others. Our Stem School Team also started from 2022. </p>
 </body>
 </html>
