--- a/Stem-School-Team-And-Maker-Lab/index.html
+++ b/Stem-School-Team-And-Maker-Lab/index.html
@@ -9,9 +9,10 @@
             font-family: monospace;
             color: white;
         }
-        p{
+        ul{
             color: ghostwhite;
             font-size: x-large ;
+            list-type: disc;
         }
         body {
         background-image: url('Background.jpg');
