--- a/Stem-School-Team-And-Maker-Lab/index.html
+++ b/Stem-School-Team-And-Maker-Lab/index.html
@@ -28,6 +28,15 @@
     <img src="Stem_1.png" alt="" width="" height="200">
     <img src="Stem_2.png" alt="" width="" height="200">
     <br>
-    <p>STEM Club and Maker Lab were established in March 2022. Here were 40 computer and 5 laptop. Our teachers also teach a lots of robotic class such as micro bit class, arduino class, scratch class and many others. Our Stem School Team also started from 2022. </p>
+    <ul><li>Makerlab was established in 2022. Our School Team started on 21 April 2022. There are 40 computers and 5 laptops. </li></ul>
+    &nbsp;&nbsp;&nbsp;
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li>Students achieve lots of achievements in stem like NRC Competition, RAC Competition, Coolest Project Malaysia, Scratch Competition, Microbit Competition, etc. </li></ul>
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li></li></ul>
 </body>
 </html>
