--- a/Stem-School-Team-And-Maker-Lab/index.html
+++ b/Stem-School-Team-And-Maker-Lab/index.html
@@ -34,9 +34,25 @@
     <img src="" alt="" width="" height="200">
     <br>
     <ul><li>Students achieve lots of achievements in stem like NRC Competition, RAC Competition, Coolest Project Malaysia, Scratch Competition, Microbit Competition, etc. </li></ul>
+    &nbsp;&nbsp;&nbsp;
     <img src="" alt="" width="" height="200">
     <img src="" alt="" width="" height="200">
     <br>
-    <ul><li></li></ul>
+    <ul><li>Our school also organized some coding competitions in Makerlab. We invited all schools in Penang to participate in competitions like Scratch Competition and Microbit Competition. </li></ul>
+    &nbsp;&nbsp;&nbsp;
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li>Students can learn a lot about science and mathematics, increase their innovative thinking, inspire creativity, etc . By participating in some projects, students can learn lots of knowledge and fulfill their teamwork with team members. </li></ul>
+    &nbsp;&nbsp;&nbsp;
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li> Our teachers also teach a lot of robotic classes such as microbit class, arduino class, scratch class and many others to increase our school students' standards in STEM. </li></ul>
+    &nbsp;&nbsp;&nbsp;
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li>All of all, STEM is a very fascinating activity that is encouraged to participate in. By participating in STEM, students will be more interested in Science and Mathematics.</li></ul>
 </body>
 </html>
