--- a/TVPSS/index.html
+++ b/TVPSS/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TVPSS</title>
     <style>
+        <style>
         h1{
             font-family: monospace;
             color: white;
         }
-        p{
+        ul{
             color: ghostwhite;
             font-size: x-large ;
+            list-type: disc;
         }
         body {
         background-image: url('Background.jpg');
@@ -24,12 +26,9 @@
 <body>
     <h1>TVPSS</h1>
     &nbsp;&nbsp;&nbsp;
-    <img src="TVPSS_1.png" alt="" width="" height="200">
-    <img src="TVPSS_2.png" alt="" width="" height="200">
-    <p>Our school also have a room call TVPSS. There were 2 part in that room. Some pupils can edit video in the editing area. </p>
-    &nbsp;&nbsp;&nbsp;
-    <img src="TVPSS_3.png" alt="" width="" height="200">
-    <img src="TVPSS_4.png" alt="" width="" height="200">
-    <p>And some pupils will receive interview at another room. </p>
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li></li></ul>
 </body>
 </html>
