--- a/TVPSS/index.html
+++ b/TVPSS/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TVPSS</title>
     <style>
-        <style>
         h1{
             font-family: monospace;
             color: white;
@@ -29,6 +28,21 @@
     <img src="" alt="" width="" height="200">
     <img src="" alt="" width="" height="200">
     <br>
-    <ul><li></li></ul>
+    <ul><li>TVPSS ROOM was built in 2021. Firstly, it was a frog class. Students used to learn some Chinese, English, and Malay knowledge in the frog class. In 2020, our new principal, BOO CHENG CHOON, started to plan to build a TVPSS Room. In 2021, the TVPSS Room had been finished building.</li></ul>
+    &nbsp;&nbsp;&nbsp;
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li>Our TVPSS Room has three areas. They are the editing area, voice recording area, and shooting area. Students can learn how to edit videos, record videos, and many more. Until now, 48 videos have been recorded by the TVPSS Room. They were about our school surroundings, festivals, competitions and many more.</li></ul>
+    &nbsp;&nbsp;&nbsp;
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li>In 2022, the first video was recorded, it was about someone playing a guitar. By recording videos, students' confidence will be increased. Besides, students can also learn some new knowledge and expand their vocabulary.</li></ul>
+    &nbsp;&nbsp;&nbsp;
+    <img src="" alt="" width="" height="200">
+    <img src="" alt="" width="" height="200">
+    <br>
+    <ul><li>Apart from that, the TVPSS Room is a place where students can learn how to edit and record videos. It’s a very interesting program, right?</li></ul>
 </body>
 </html>
