--- a/Introduce-SJKC-Chung-Hwa-1/index.html
+++ b/Introduce-SJKC-Chung-Hwa-1/index.html
@@ -43,6 +43,10 @@
             background-color: #555555;
             color: white;
         }
+        table {
+            color: white;
+            text-align: center;
+        }
         body {
         background-image: url('Background.jpg');
         background-repeat: no-repeat;
@@ -68,8 +72,19 @@
         <input type="button" class="button" onclick="window.location.href='https://loh-yik-shen.github.io/Introduce-my-school/Stem-School-Team-And-Maker-Lab/index.html';" value="STEM School Team And Maker Lab">
     </form>
     <br><br><br><br><br>
+    <h2 style="text-align: center;">TEAM NAME: TEAM INNOVATORS</h2>
     <h3 style="text-align: center;">By:Loh Yik Shen,Loy Zheng Yi and Ooi Ting Ruey</h3>
     <h2 style="text-align: center;">SJKC Chung Hwa 1</h2>
     <h3 style="text-align: center;">Jln Telaga Air, 12200, Butterworth, Pulau Pinang</h3>
+    <table width="200">
+        <tr>
+            <th width="100">Email</th>
+            <th width="100">Contact</th>
+        </tr>
+        <tr align="center">
+            <td>lyikshen@gmail.com</td>
+            <td>018-400 5014</td>
+        </tr>
+    </table>
 </body>
 </html>
