--- a/Introduce-SJKC-Chung-Hwa-1/index.html
+++ b/Introduce-SJKC-Chung-Hwa-1/index.html
@@ -45,7 +45,7 @@
         }
         table {
             color: white;
-            text-align: center;
+            align: center;
         }
         body {
         background-image: url('Background.jpg');
@@ -76,10 +76,10 @@
     <h3 style="text-align: center;">By:Loh Yik Shen,Loy Zheng Yi and Ooi Ting Ruey</h3>
     <h2 style="text-align: center;">SJKC Chung Hwa 1</h2>
     <h3 style="text-align: center;">Jln Telaga Air, 12200, Butterworth, Pulau Pinang</h3>
-    <table width="200">
+    <table width="700">
         <tr>
-            <th width="100">Email</th>
-            <th width="100">Contact</th>
+            <th width="350">Email</th>
+            <th width="350">Contact</th>
         </tr>
         <tr align="center">
             <td>lyikshen@gmail.com</td>
