--- a/Introduce-SJKC-Chung-Hwa-1/index.html
+++ b/Introduce-SJKC-Chung-Hwa-1/index.html
@@ -75,7 +75,7 @@
     <h3 style="text-align: center;">By:Loh Yik Shen,Loy Zheng Yi and Ooi Ting Ruey</h3>
     <h2 style="text-align: center;">SJKC Chung Hwa 1</h2>
     <h3 style="text-align: center;">Jln Telaga Air, 12200, Butterworth, Pulau Pinang</h3>
-    <table width="1000">
+    <table bgcolor="white" width="1000">
         <tr>
             <th width="500">Email</th>
             <th width="500">Contact</th>
