--- a/Introduce-SJKC-Chung-Hwa-1/index.html
+++ b/Introduce-SJKC-Chung-Hwa-1/index.html
@@ -45,6 +45,7 @@
         }
         table {
             color: white;
+            border: 1px solid ghostwhite;
         }
         body {
         background-image: url('Background.jpg');
@@ -76,7 +77,7 @@
     <h2 style="text-align: center;">SJKC Chung Hwa 1</h2>
     <h3 style="text-align: center;">Jln Telaga Air, 12200, Butterworth, Pulau Pinang</h3>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <table bgcolor="white" width="1000">
+    <table width="1000">
         <tr>
             <th width="500">Email</th>
             <th width="500">Contact</th>
