--- a/Introduce-SJKC-Chung-Hwa-1/index.html
+++ b/Introduce-SJKC-Chung-Hwa-1/index.html
@@ -43,7 +43,7 @@
             background-color: #555555;
             color: white;
         }
-        table {
+        table, tr, th, td{
             color: white;
             border: 1px solid ghostwhite;
         }
