--- a/Introduce-Ourselves/index.html
+++ b/Introduce-Ourselves/index.html
@@ -14,6 +14,15 @@
             font-size: x-large ;
             list-type: disc;
         }
+        table,
+        th,
+        td {
+            color: white;
+            border: 1px solid ghostwhite;
+        }
+        table.center {
+            margin: auto;
+        }
         body {
         background-image: url('Background.jpg');
         background-repeat: no-repeat;
@@ -31,5 +40,19 @@
     <br>
     <h1 style="text-align: center;">Ooi Ting Ruey</h1>
     <ul><li>Hi, I'm Ooi Ting Ruey. I'm 11 years old. I come from SJKC CHUNG HWA 1 in Butterworth, Pulau Pinang. In this competition, I give many suggestion and I edit the video. I think this is the most interesting competition that I have seen ever. </li></ul>
+    <table class="center" width="600">
+        <thead>
+            <tr>
+            <th width="300">Email:</th>
+            <th width="300">Contact:</th>
+            </tr>
+        </thead>
+        <tbody align: center;>
+            <tr>
+            <td>lyikshen@gmail.com</td>
+            <td>018-400 5014</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
