--- a/Introduce-Ourselves/index.html
+++ b/Introduce-Ourselves/index.html
@@ -47,7 +47,7 @@
                 <th width="300">Contact:</th>
             </tr>
         </thead>
-        <tbody align: center;>
+        <tbody>
             <tr>
                 <td>lyikshen@gmail.com</td>
                 <td>018-400 5014</td>
