--- a/Introduce-SJKC-Chung-Hwa-1/index.html
+++ b/Introduce-SJKC-Chung-Hwa-1/index.html
@@ -52,8 +52,8 @@
     </style>
 </head>
 <body>
-    <img src="Coolest_Projects.png" alt="" width="" height="90px">
-    <img src="SJKC_Chung_Hwa_1.png" alt="" width="" height="90px">
+    <img src="Coolest_Projects.png" alt="" width="" height="90px" margin-left: auto;>
+    <img src="SJKC_Chung_Hwa_1.png" alt="" width="" height="90px" margin-right: auto;>
     <br>
     <h1 style="text-align: center;" >Welcome To SJKC Chung Hwa 1</h1>
     <form>
