--- a/Stem-School-Team-And-Maker-Lab/index.html
+++ b/Stem-School-Team-And-Maker-Lab/index.html
@@ -32,22 +32,22 @@
     <h1>Stem School Team And Maker Lab</h1>
     &nbsp;&nbsp;&nbsp;
     <img src="Stem_1.png" alt="" width="350" height="200" class="center">
-    <img src="Stem_2.png" alt="" width="350" height="200" class="center">
+    <img src="Stem_2.png" alt="" width="350" height="200">
     <br>
     <ul><li>Makerlab was established in 2022. Our School Team started on 21 April 2022. There are 40 computers and 5 laptops. </li></ul>
     &nbsp;&nbsp;&nbsp;
     <img src="Stem_3.jpg" alt="" width="350" height="200" class="center">
-    <img src="Stem_4.jpg" alt="" width="350" height="200" class="center">
+    <img src="Stem_4.jpg" alt="" width="350" height="200">
     <br>
     <ul><li>Students achieve lots of achievements in stem like NRC Competition, RAC Competition, Coolest Project Malaysia, Scratch Competition, Microbit Competition, etc. </li></ul>
     &nbsp;&nbsp;&nbsp;
     <img src="Stem_5.jpg" alt="" width="350" height="200" class="center">
-    <img src="Stem_6.jpg" alt="" width="350" height="200" class="center">
+    <img src="Stem_6.jpg" alt="" width="350" height="200">
     <br>
     <ul><li>Our school also organized some coding competitions in Makerlab. We invited all schools in Penang to participate in competitions like Scratch Competition and Microbit Competition. </li></ul>
     &nbsp;&nbsp;&nbsp;
     <img src="Stem_7.png" alt="" width="350" height="200" class="center">
-    <img src="Stem_8.png" alt="" width="350" height="200" class="center">
+    <img src="Stem_8.png" alt="" width="350" height="200">
     <br>
     <ul><li>Students can learn a lot about science and mathematics, increase their innovative thinking, inspire creativity, etc. By participating in some projects, students can learn lots of knowledge and fulfill their teamwork with team members. </li></ul>
     <br>
