--- a/School-Hall/index.html
+++ b/School-Hall/index.html
@@ -28,7 +28,7 @@
     <img src="Hall_1.PNG" alt="" width="350" height="200">
     <img src="Hall_2.png" alt="" width="350" height="200">
     <br>
-    <ul><li>It is a very comfortable place for every school member, especially teachers and students to gether here. Every Monday of the month, students and teachers will gather here. In the morning, they will sing" Lagu Negaraku" and" Untuk Negeri Kita". Besides, they will also read the" Rukun Negara". Then, our school principal will also give a speech to every student. </li></ul>
+    <ul><li>It is a very comfortable place for every school member, especially teachers and students to gether here. Every Monday of the month, students and teachers will gether here. In the morning, they will sing" Lagu Negaraku" and" Untuk Negeri Kita". Besides, they will also read the" Rukun Negara". Then, our school principal will also give a speech to every student. </li></ul>
     &nbsp;&nbsp;&nbsp;
     <img src="Hall_3.PNG" alt="" width="350" height="200">
     <img src="Hall_4.PNG" alt="" width="350" height="200">
